# windchime

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  install.sh
.github/workflows/: release.yml
src/: biom.rs  color_print.rs  config.rs  demultiplex.rs  logger.rs  main.rs  pipeline.rs  wizard.rs
